@startuml models_diagram
skinparam classAttributeIconSize 0

package "Models" {
  class Product {
    +int Id
    +string Name
    +string Category
    +decimal Price
    +bool IsInCatalogue
  }

  class Inventory {
    +int Id
    +int ProductId
    +int Quantity
  }

  class ShoppingCart {
    +int Id
    +int CustomerId
    +decimal Subtotal
    +decimal Tax
    +decimal Total
  }

  class CartItem {
    +int Id
    +int ShoppingCartId
    +int ProductId
    +string ProductName
    +decimal UnitPrice
    +int Quantity
  }

  class Order {
    +int Id
    +int CustomerId
    +DateTime OrderDate
    +OrderStatus Status
    +decimal Subtotal
    +decimal Tax
    +decimal Total
  }

  class OrderLine {
    +int Id
    +int OrderId
    +int ProductId
    +string ProductName
    +decimal UnitPrice
    +int Quantity
    +decimal LineTotal
  }

  class Account {
    +int Id
    +string Name
    +string Email
    +string Phone
    +string Role
  }

  ' Payment / Invoice / Shipment simplified for diagram
  class Payment {
    +int Id
    +int OrderId
    +decimal Amount
    +string Method
    +DateTime? PaymentDate
    +string Status
  }

  class Invoice {
    +int Id
    +int OrderId
    +string InvoiceNumber
    +decimal Amount
  }

  class Shipment {
    +int Id
    +int OrderId
    +string TrackingNumber
    +string Address
    +ShipmentStatus Status
    +DateTime? DeliveryDate
  }
}

' relationships
Product "1" -- "0..1" Inventory : "has"
ShoppingCart "1" *-- "*" CartItem : "contains"
CartItem o-- Product : "references"
Order "1" *-- "*" OrderLine : "has lines"
OrderLine --> Product : "product"
Account "1" -- "*" Order : "places"
Order "0..1" -- "0..1" Shipment : "may have"
Payment --> Order : "pays"
Invoice --> Order : "for"

note right of ShoppingCart
  ShoppingCart and CartItem map to `Models/ShoppingCart.cs`
  and `Models/CartItem.cs` in the repository.
end note

@enduml
